[package]
name = "qiniu-upload-rs"
version = "0.0.1"
authors = ["Steven Gu <asongala@163.com>"]
license = "MIT"
description = "Rust version of Qiniu Upload"
homepage = "https://github.com/silathdiir/qiniu-upload-rs"
documentation = "https://github.com/silathdiir/qiniu-upload-rs"
repository = "https://github.com/silathdiir/qiniu-upload-rs"
edition = "2018"

[dependencies]
base64 = "0.11"
flate2 = "1.0"
rust-crypto = "0.2"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.reqwest]
version = "0.10.0"
features = ["blocking"]
